--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,10 @@
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="A new Flutter project." />
-
+    <meta
+      name="google-signin-client_id"
+      content="798212628790-4r9u4pluorqdaoopjt18atgisdck2pkn.apps.googleusercontent.com"
+    />
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -40,6 +43,7 @@
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
     <script>
